--- a/osa2/maiden_tiedot/package.json
+++ b/osa2/maiden_tiedot/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "puhelinluettelo",
+  "name": "maiden_tiedot",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axiom": "^0.1.6",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -35,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "json-server": "^0.16.3"
   }
 }
